The rest of the V0.4.0 changes
